Major update to console and configuration files
In this update, several files have been modified to improve the functionality and configuration of the project.

In 'console_widget.cpp' and 'console_widget.h', new libraries have been included, the font type has been changed, new functions and methods have been added, and some existing functions have been changed.

'con_var.cpp' and 'con_var.h' have been modified to remove some features, add new features, and change some existing features.

The handling of key events has been changed in 'console_completer.cpp' and the way messages are printed has been changed in 'console_printer.cpp'.

New class and type declarations have been added to 'const.h'.

Finally, the project and UI configuration has been changed in 'console_widget.ui' and 'console_widget.vcxproj.filters'.

--- a/console_widget.ui
+++ b/console_widget.ui
@@ -30,7 +30,14 @@
     <number>2</number>
    </property>
    <item row="0" column="0">
-    <widget class="QPlainTextEdit" name="consoleTextEdit"/>
+    <widget class="QPlainTextEdit" name="consoleTextEdit">
+     <property name="undoRedoEnabled">
+      <bool>false</bool>
+     </property>
+     <property name="readOnly">
+      <bool>true</bool>
+     </property>
+    </widget>
    </item>
    <item row="1" column="0">
     <widget class="QLineEdit" name="commandLineEdit"/>
